# ha-homepod-sensors

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/homepod_sensors/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  webhook.py
custom_components/homepod_sensors/translations/: en.json
shortcuts/: README.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_sensor.py  test_webhook.py
